--- a/Thread Affair/html/index.html
+++ b/Thread Affair/html/index.html
@@ -161,12 +161,12 @@
         <a
           href=""
           title="create your suits"
-          class="banner-cta"
+          class="btn btn-lg"
         >Create your suite</a>
 
         <section class="banner-copy">
           <p>
-            <span>A Tailored Suit</span>that will fit you perfectly is a dream for everybody.
+            <span class="d-md-inline">A Tailored Suit</span>that will fit you perfectly is a dream for everybody.
           </p>
 
           <p>
@@ -234,6 +234,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn btn-main"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -282,6 +283,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -330,6 +332,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -395,6 +398,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -443,6 +447,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -491,6 +496,7 @@
               <a
                 href=""
                 title="Add to Cart"
+                class="btn"
               >Add to cart</a>
             </div>
             <!-- /.product-tile-controls  -->
@@ -506,7 +512,7 @@
           action=""
           class="cont"
         >
-          <h1>Subscribe to our <span>newsletter</span></h1>
+          <h1 class="h1-newsletter">Subscribe to our <span>newsletter</span></h1>
 
           <input
             type="email"
@@ -581,8 +587,8 @@
 
 
   <footer class="footer">
-    <section class="footer-main">
-      <div class="container">
+    <section class="footer-main text-uppercase py-4">
+      <div class="cont">
         <nav class="footer-nav">
           <ul>
             <li>
@@ -762,36 +768,36 @@
         </nav>
         <!-- footer-nav -->
 
-        <nav class="footer-support">
-          <ul>
-            <li>
+        <nav class="footer-support text-center my-4 my-md-0 d-md-inline-block">
+          <ul class="d-inline-flex justify-content-between">
+            <li class="d-inline-block">
               <a
                 href=""
                 title="Support"
-              ><i class="fas fa-phone-alt"></i> Support </a>
+              ><i class="fas fa-phone-alt d-block mb-1"></i> Support </a>
             </li>
 
-            <li>
+            <li class="d-inline-block">
               <a
                 href=""
                 title="Chat"
-              ><i class="fas fa-comment-dots"></i>Chat </a>
+              ><i class="fas fa-comment-dots d-block mb-1"></i>Chat </a>
             </li>
 
-            <li>
+            <li class="d-inline-block">
               <a
                 href=""
                 title="Email"
-              ><i class="fas fa-envelope-open-text"></i>Email</a>
+              ><i class="fas fa-envelope-open-text d-block mb-1"></i>Email</a>
             </li>
           </ul>
         </nav>
         <!-- footer-support -->
 
-        <div class="footer-contact">
+        <div class="footer-contact d-md-inline-block">
           <p><span>THREAD AFFAIR MILANO</span></p>
 
-          <p>
+          <p class="text-capitalize">
             Largo Augusto 3, Milano, 20122, Milano, IT
             <a
               href="tel:0039 02 760 003 66 "
@@ -800,6 +806,7 @@
             <a
               href="mailto:office@thread-affair.com"
               title="Office@threadaffair.com"
+              class="text-lowercase"
             >office@thread-affair.com</a>
           </p>
         </div>
@@ -808,7 +815,7 @@
     </section>
     <!-- /.footer-main  -->
 
-    <section class="footer-secondary">
+    <section class="footer-secondary cont text-center mt-3">
       <p>
         ©2019 THREAD AFFAIR. All Rights Reserved.
       </p>
