--- a/Thread Affair/html/index.html
+++ b/Thread Affair/html/index.html
@@ -768,7 +768,7 @@
         </nav>
         <!-- footer-nav -->
 
-        <nav class="footer-support text-center my-4 my-md-0 d-md-inline-block">
+        <nav class="footer-support text-center my-4 d-md-inline-block">
           <ul class="d-inline-flex justify-content-between">
             <li class="d-inline-block">
               <a
