--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -186,7 +186,7 @@
 
 
 
-    <section class="catalog-preview">
+    <section class="catalog-preview cont">
       <div class="border"></div>
 
       <h1>New Stuff</h1>
@@ -316,7 +316,7 @@
     </section>
     <!-- ./ catalog-preview  -->
 
-    <section class="catalog-preview">
+    <section class="catalog-preview cont">
       <div class="border"></div>
 
       <h1>Most loved</h1>
@@ -475,7 +475,7 @@
     </section>
     <!-- ./home-promo  -->
 
-    <section class="catalog-preview">
+    <section class="catalog-preview cont">
       <div class="border"></div>
 
       <h1>Men`s</h1>
@@ -612,7 +612,7 @@
     </section>
     <!-- ./ catalog-preview 3   -->
 
-    <section class="catalog-preview">
+    <section class="catalog-preview cont">
       <div class="border"></div>
 
       <h1>Women`s</h1>
