--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -19,116 +19,125 @@
 </head>
 <body>
   <header class="header">
-    <div class="header-contact">
-      <ul>
-        <li>
-          <a
-            href="http://www.youtube.com"
-            title="Youtube"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-youtube"></i></a>
-        </li>
-
-        <li>
-          <a
-            href="http://www.twitter.com"
-            title="Twitter"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-twitter"></i></a>
-        </li>
-
-        <li>
-          <a
-            href="http://www.facebook.com"
-            title="Facebook"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-facebook-f"></i></a>
-        </li>
-
-        <li>
-          <a
-            href="http://www.instagram.com"
-            title="Instagram"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-instagram-square"></i></a>
-        </li>
-      </ul>
-
-      <p>
-        <a href="tel:+44 (0)10 2345 6789">CALL US +44 (0)10 2345 6789</a>
-      </p>
-    </div>
-    <!-- ./ header-contact  -->
-
-    <div class="header-controls">
-      <div class="menu-nav">
-        <a
-          href=""
-          title="menu"
-          class="menu-bars"
-        ><i class="fas fa-bars"></i></a>
-
-
-        <form action="header-search">
-          <div class="search-form">
-
-            <input
-              type="text"
-              name="search"
-              id="search"
-              placeholder="Search"
-            >
-            <button type="submit"><i class="fas fa-search icon"></i></button>
-          </div>
-        </form>
-      </div>
-      <!-- ./ search-form  -->
-
-      <div class="user-control cont">
-        <div>
-          <a
-            href=""
-            title="homepage"
-            class="logo"
-          >MONOCHROME</a>
-        </div>
-
+    <div class="img-cover">
+      <div class="header-contact">
         <ul>
           <li>
             <a
-              href=""
-              title="Account"
-            >
-              <i class="far fa-user"></i>
-            </a>
+              href="http://www.youtube.com"
+              title="Youtube"
+              target="_blank"
+              rel="noopener noreferrer"
+            ><i class="fab fa-youtube"></i></a>
           </li>
 
           <li>
             <a
-              href=""
-              title="wishlist"
-            >
-              <i class="far fa-heart"></i>
-            </a>
+              href="http://www.twitter.com"
+              title="Twitter"
+              target="_blank"
+              rel="noopener noreferrer"
+            ><i class="fab fa-twitter"></i></a>
           </li>
 
           <li>
             <a
-              href=""
-              title="cart"
-            >
-              <i class="fas fa-shopping-bag"></i>
-            </a>
+              href="http://www.facebook.com"
+              title="Facebook"
+              target="_blank"
+              rel="noopener noreferrer"
+            ><i class="fab fa-facebook-f"></i></a>
+          </li>
+
+          <li>
+            <a
+              href="http://www.instagram.com"
+              title="Instagram"
+              target="_blank"
+              rel="noopener noreferrer"
+            ><i class="fab fa-instagram-square"></i></a>
           </li>
         </ul>
+
+        <p>
+          <a href="tel:+44 (0)10 2345 6789">CALL US +44 (0)10 2345 6789</a>
+        </p>
       </div>
-      <!-- ./user-control  -->
+      <!-- ./ header-contact  -->
+
+      <div class="header-controls">
+        <div class="menu-nav">
+          <div class="cont">
+            <p class="d-md-none">
+              <a
+                href=""
+                title="menu"
+                class="menu-bars"
+              ><i class="fas fa-bars"></i></a>
+            </p>
+
+
+            <form action="header-search">
+              <div class="search-form">
+
+                <input
+                  type="text"
+                  name="search"
+                  id="search"
+                  placeholder="Search"
+                >
+                <button type="submit"><i class="fas fa-search icon"></i></button>
+              </div>
+            </form>
+          </div>
+          <!-- ./ cont  -->
+        </div>
+        <!-- ./ search-form  -->
+
+        <div class="user-control cont">
+          <div class="d-md-none">
+            <a
+              href=""
+              title="homepage"
+              class="logo"
+            >MONOCHROME</a>
+          </div>
+
+          <ul>
+            <li>
+              <a
+                href=""
+                title="Account"
+              >
+                <i class="far fa-user"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="wishlist"
+              >
+                <i class="far fa-heart"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="cart"
+              >
+                <i class="fas fa-shopping-bag"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- ./user-control  -->
+      </div>
+      <!-- ./ header-controls  -->
     </div>
-    <!-- ./ header-controls  -->
+    <!-- ./ img-cover  -->
+
 
     <nav class="nav">
       <ul>
@@ -252,7 +261,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -282,7 +291,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -382,7 +391,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -412,7 +421,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -453,25 +462,27 @@
         alt="oliver pecker"
       >
 
-      <h2> <span>Watches for entrepreneurs</span> </h2>
+      <div class="para-home">
+        <h2> <span>Watches for entrepreneurs</span> </h2>
 
-      <p>
-        But I must explain to you how all this mistaken idea of
-        denouncing pleasure and praising pain was born and I will
-        give you a complete account of the system, and expound the
-        actual teachings of the great explorer of the truth, the
-        master-builder of human happiness. No one rejects, dislikes,
-        or avoids pleasure itself, because.
-      </p> <br>
+        <p>
+          But I must explain to you how all this mistaken idea of
+          denouncing pleasure and praising pain was born and I will
+          give you a complete account of the system, and expound the
+          actual teachings of the great explorer of the truth, the
+          master-builder of human happiness. No one rejects, dislikes,
+          or avoids pleasure itself, because.
+        </p> <br>
 
-      <p>
-        <span>But I must explain to you how all this mistaken idea of <br> denouncing
-          pleasure and praising pain was born and I <br> will give you a complete
-          account of the system, and <br> expound the actual teachings of the great
-          explorer of <br> the truth, the master-builder of human happiness. No <br> one
-          rejects, dislikes, or avoids pleasure itself, because.
-        </span>
-      </p>
+        <p>
+          <span>But I must explain to you how all this mistaken idea of denouncing
+            pleasure and praising pain was born and I will give you a complete
+            account of the system, and expound the actual teachings of the great
+            explorer of the truth, the master-builder of human happiness. No one
+            rejects, dislikes, or avoids pleasure itself, because.
+          </span>
+        </p>
+      </div>
     </section>
     <!-- ./home-promo  -->
 
@@ -541,7 +552,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -571,7 +582,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -643,7 +654,7 @@
           </a>
 
           <div class="product-pricing">
-            <span class="product-price">$425</span>
+            <p class="product-price">$425</p>
           </div>
         </article>
         <!-- ./ catalog-tile  -->
@@ -678,7 +689,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -708,7 +719,7 @@
         </article>
         <!-- ./ catalog-tile  -->
 
-        <article class="catalog-tile h-img">
+        <article class="catalog-tile">
           <a
             href=""
             class="image-container"
@@ -753,179 +764,190 @@
 
   <footer class="footer">
     <section class="footer-info">
-      <h3>How can we help?</h3>
+      <div class="cont">
+        <h3 class="d-md-none">How can we help?</h3>
 
-      <ul>
-        <li><a
-            href=""
-            title="call us"
-          >call us</a>
-        </li>
-
-        <li><a
-            href="tel:+44 (0)10 2345 6789"
-            title="+44 (0)10 2345 6789"
-          >+44 (0)10 2345 6789</a>
-        </li>
-
-        <li><a
-            href=""
-            title="email"
-          >EMAIL CUSTOMER CARE</a>
-        </li>
-
-        <li><a
-            href=""
-            title="mobile version"
-          >see mobile version</a>
-        </li>
-      </ul>
-
-      <ul>
-        <li>
-          <a
-            href=""
-            title="advice"
-          >style&fit advice</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="faqs"
-          >faqs</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="delivery"
-          >delivery</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="returns"
-          >exchagnes&returns</a>
-        </li>
-      </ul>
-
-      <ul>
-        <li>
-          <a
-            href=""
-            title="about us"
-          >about us</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="careers"
-          >careers</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="affiliates"
-          >affiliates</a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            title="advertising"
-          >advertising</a>
-        </li>
-      </ul>
-
-      <div class="terms">
-        <ul>
-          <li>
-            <a
+        <ul class="d-none d-md-block">
+          <li><a
               href=""
-              title="conditions"
-            >terms&conditions</a>
+              title="call us"
+            >call us</a>
           </li>
 
-          <li>
-            <a
+          <li><a
+              href="tel:+44 (0)10 2345 6789"
+              title="+44 (0)10 2345 6789"
+            >+44 (0)10 2345 6789</a>
+          </li>
+
+          <li><a
               href=""
-              title="privacy"
-            >privacy&cookies</a>
+              title="email"
+            >EMAIL CUSTOMER CARE</a>
+          </li>
+
+          <li><a
+              href=""
+              title="mobile version"
+            >see mobile version</a>
           </li>
         </ul>
+
+        <div class="footer-nav">
+          <ul>
+            <li>
+              <a
+                href=""
+                title="advice"
+              >style&fit advice</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="faqs"
+              >faqs</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="delivery"
+              >delivery</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="returns"
+              >returns</a>
+            </li>
+          </ul>
+
+          <div class="border d-md-none"></div>
+
+          <ul>
+            <li>
+              <a
+                href=""
+                title="about us"
+              >about us</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="careers"
+              >careers</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="affiliates"
+              >affiliates</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="advertising"
+              >advertising</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="terms text-center d-md-none">
+          <ul>
+            <li>
+              <a
+                href=""
+                title="conditions"
+              >terms&conditions</a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                title="privacy"
+              >privacy&cookies</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <section class="footer-subscribe">
-      <h3>Let`s connect!</h3>
+      <div class="cont">
+        <h3 class="d-md-none">Let`s connect!</h3>
 
-      <form action="">
-        <p>Be the first to receive exclusives offers</p>
+        <form action="">
+          <p class="d-md-none">Be the first to receive exclusives offers</p>
 
-        <p> <span>sign up for our newsletter</span></p>
+          <p> <span>sign up for our newsletter</span></p>
 
-        <label for="email"></label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="Email"
-        >
+          <label for="email"></label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+          >
 
-        <button type="submit">Submit</button>
+          <button
+            type="submit"
+            class="mt-4"
+          >Submit</button>
 
-        <p class="privacy">
-          I agree with <a
-            href=""
-            title="privacy"
-          >Privacy Policy</a> and i want to receive <br> emails from Monochrome
-        </p>
-      </form>
+          <p class="privacy d-md-none">
+            I agree with <a
+              href=""
+              title="privacy"
+            >Privacy Policy</a> and i want to receive <br> emails from Monochrome
+          </p>
+        </form>
 
-      <div class="footer-social">
-        <p>We are highly likeable</p>
+        <div class="footer-social">
+          <p class="d-md-none">We are highly likeable</p>
 
-        <ul>
-          <li>
-            <a
-              href="http://www.youtube.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="youtube"
-            ><i class="fab fa-youtube"></i></a>
-          </li>
+          <ul>
+            <li>
+              <a
+                href="http://www.youtube.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="youtube"
+              ><i class="fab fa-youtube"></i></a>
+            </li>
 
-          <li>
-            <a
-              href="http://www.twiter.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="twiter"
-            ><i class="fab fa-twitter"></i></a>
-          </li>
+            <li>
+              <a
+                href="http://www.twiter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="twiter"
+              ><i class="fab fa-twitter"></i></a>
+            </li>
 
-          <li>
-            <a
-              href="http://www.facebook.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="facebook"
-            ><i class="fab fa-facebook"></i></a>
-          </li>
+            <li>
+              <a
+                href="http://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="facebook"
+              ><i class="fab fa-facebook"></i></a>
+            </li>
 
-          <li>
-            <a
-              href="http://www.instagram.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="instagram"
-            ><i class="fab fa-instagram-square"></i></a>
-          </li>
-        </ul>
+            <li>
+              <a
+                href="http://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="instagram"
+              ><i class="fab fa-instagram-square"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </footer>
