--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -60,7 +60,10 @@
         </ul>
 
         <p>
-          <a href="tel:+44 (0)10 2345 6789">CALL US +44 (0)10 2345 6789</a>
+          <a
+            href="tel:+44(0)1023456789"
+            title="Call us"
+          >CALL US +44 (0)10 2345 6789</a>
         </p>
       </div>
       <!-- ./ header-contact  -->
@@ -767,95 +770,98 @@
       <div class="cont">
         <h3 class="d-md-none">How can we help?</h3>
 
-        <ul class="d-none d-md-block">
-          <li><a
-              href=""
-              title="call us"
-            >call us</a>
-          </li>
-
-          <li><a
-              href="tel:+44 (0)10 2345 6789"
-              title="+44 (0)10 2345 6789"
-            >+44 (0)10 2345 6789</a>
-          </li>
-
-          <li><a
-              href=""
-              title="email"
-            >EMAIL CUSTOMER CARE</a>
-          </li>
-
-          <li><a
-              href=""
-              title="mobile version"
-            >see mobile version</a>
-          </li>
-        </ul>
-
-        <div class="footer-nav">
-          <ul>
-            <li>
-              <a
+        <div class="footer-navigation">
+          <ul class="d-none d-md-block">
+            <li><a
                 href=""
-                title="advice"
-              >style&fit advice</a>
+                title="call us"
+              >call us</a>
             </li>
 
-            <li>
-              <a
-                href=""
-                title="faqs"
-              >faqs</a>
+            <li><a
+                href="tel:+44 (0)10 2345 6789"
+                title="+44 (0)10 2345 6789"
+              >+44 (0)10 2345 6789</a>
             </li>
 
-            <li>
-              <a
+            <li><a
                 href=""
-                title="delivery"
-              >delivery</a>
+                title="email"
+              >EMAIL CUSTOMER CARE</a>
             </li>
 
-            <li>
-              <a
+            <li><a
                 href=""
-                title="returns"
-              >returns</a>
+                title="mobile version"
+              >see mobile version</a>
             </li>
           </ul>
 
-          <div class="border d-md-none"></div>
+          <div class="footer-nav">
+            <ul>
+              <li>
+                <a
+                  href=""
+                  title="advice"
+                >style&fit advice</a>
+              </li>
 
-          <ul>
-            <li>
-              <a
-                href=""
-                title="about us"
-              >about us</a>
-            </li>
+              <li>
+                <a
+                  href=""
+                  title="faqs"
+                >faqs</a>
+              </li>
 
-            <li>
-              <a
-                href=""
-                title="careers"
-              >careers</a>
-            </li>
+              <li>
+                <a
+                  href=""
+                  title="delivery"
+                >delivery</a>
+              </li>
 
-            <li>
-              <a
-                href=""
-                title="affiliates"
-              >affiliates</a>
-            </li>
+              <li>
+                <a
+                  href=""
+                  title="returns"
+                >returns</a>
+              </li>
+            </ul>
 
-            <li>
-              <a
-                href=""
-                title="advertising"
-              >advertising</a>
-            </li>
-          </ul>
+            <div class="border d-md-none"></div>
+
+            <ul>
+              <li>
+                <a
+                  href=""
+                  title="about us"
+                >about us</a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="careers"
+                >careers</a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="affiliates"
+                >affiliates</a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="advertising"
+                >advertising</a>
+              </li>
+            </ul>
+          </div>
         </div>
+        <!-- ./footer-navigation  -->
 
         <div class="terms text-center d-md-none">
           <ul>
