--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="img-cover">
+    <div class="img-cover home-page">
       <div class="header-contact">
         <ul>
           <li>
@@ -235,7 +235,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -265,7 +265,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -295,7 +295,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -335,7 +335,7 @@
       <div class="catalog-tiles">
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -365,7 +365,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -395,7 +395,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -425,7 +425,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -496,7 +496,7 @@
       <div class="catalog-tiles">
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -526,7 +526,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -556,7 +556,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -586,7 +586,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -633,7 +633,7 @@
       <div class="catalog-tiles">
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -663,7 +663,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -693,7 +693,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
@@ -723,7 +723,7 @@
 
         <article class="catalog-tile">
           <a
-            href=""
+            href="productpage.html"
             class="image-container"
             title="Product01"
           ><img
