--- a/Monochrome/html/menspage.html
+++ b/Monochrome/html/menspage.html
@@ -198,8 +198,8 @@
       </p>
     </section>
 
-    <nav class="product-nav">
-      <ul class="cont d-flex justify-content-between">
+    <nav class="sort-nav">
+      <ul>
         <li>
           <a href="">BESTSELLERS</a>
         </li>
@@ -228,7 +228,7 @@
     </nav>
     <!-- ./ product-nav  -->
 
-    <section class="catalog-preview cont">
+    <section class="catalog-preview">
       <div class="catalog-tiles">
         <article class="catalog-tile">
           <a
