--- a/Monochrome/html/productpage.html
+++ b/Monochrome/html/productpage.html
@@ -296,32 +296,25 @@
         <div class="hr"></div>
 
         <div class="product-buttons">
-          <div class="add-to-bag">
-            <a href="">
-              <i class="fas fa-shopping-bag shopping-bag"></i>
+          <nav>
+            <a
+              href=""
+              class="shopping-bag"
+            >
+              <i class="fas fa-shopping-bag"></i> <span>Add to bag</span>
             </a>
 
             <a
               href=""
-              title="Add to bag"
-              class="add2bag"
+              class="wishlist-btn"
             >
-              Add to bag
+              <i class="far fa-heart"></i> <span>WISHLIST</span>
             </a>
-          </div>
+          </nav>
 
-          <div class="wishlist">
-            <a href="">
-              <i class="far fa-heart product-badge"></i>
-            </a>
 
-            <a
-              href=""
-              title="Wishlist"
-            >
-              WISHLIST
-            </a>
-          </div>
+
+
         </div>
         <!-- ./ products buttons  -->
 
