--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -125,7 +125,7 @@
 
             <li>
               <a
-                href=""
+                href="shoppingbag.html"
                 title="cart"
               >
                 <i class="fas fa-shopping-bag"></i>
