--- a/Monochrome/html/menspage.html
+++ b/Monochrome/html/menspage.html
@@ -124,7 +124,7 @@
 
             <li>
               <a
-                href=""
+                href="shoppingbag.html"
                 title="cart"
               >
                 <i class="fas fa-shopping-bag"></i>
@@ -150,7 +150,7 @@
 
         <li>
           <a
-            href=""
+            href="index.html"
             title="Brands"
           >Brands</a>
         </li>
